Week 1: backend - removing region from the APIs as it doesn't contribute to risk evaluation
